# AntiAFK-RBX-Sober

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dev.agzes.antiafk-rbx-sober.desktop
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
src/: backend.rs  input.rs  main.rs  state.rs  ui.rs
src/inputs/: mod.rs  plasma.rs  swapper.rs
